**
** Official Forums: http://www.manground.org/forum/
** GoogleCode Website: http://code.google.com/p/mangadmin/
** Subversion Repository: http://mangadmin.googlecode.com/svn/
**
**    Please report bugs:  http://www.manground.org/forum/index.php?showforum=9
**
************************************************************************************************************/

=CHANGELOG= 
Rev. 127:
  * Note: Jump in revision numbers is due to svn assigning the next number to a commit, 
    regardless if it is in trunk or in a branch. This revision follows r119.
  * Moved NPC specific buttons off the Character tab and onto the NPC tab. 

Rev. 119: 
  * [UPDATE] Misc changes to Teleport lists

Rev. 117:
  * [UPDATE] Updated German localization. (Thanks Yoshi!)
  * [UPDATE] Updated Dutch localization. (Thanks Korhal!)

Rev. 116:
  * [FIX] Fixed teleport_target_position table reload (thanks Klark20!)
  * [FIX] Fixed .quest add command in Quest list (thanks Klark20!)

Rev. 115:
  * Major changes to Teleport tab, dividing all teles into 1. Continents/Types, then 2. Zone, then 3. Subzone
    Have seen some odd behavior when scrolling the lists. If you see this and have a fix, please submit!!
    Much work remains to be done in TeleportTable.lua to fully support this rev. Should be done with next rev.

Rev. 114:
  * little clean-up (there is really a lot of more to clean up) ;)
  * removing double function for hiding/revealing maps for players
  * enlarged the minimenu/toolbar and the apply-changes button to look better
  * added a checkbox to enable or disable tooltips
  * added a checkbox to enable or disable the toolbar/minimenu
  * added command: "/mangadmin minimenu 0/1" to show or hide the minimenu
  
Rev. 113:
  * Small fix, refresh button. Thanks ae3265
  
Rev. 112:
  * Fixes to shutdown commands and server info. Thanks to Sora23. (Rev. 6555+)
  
Rev. 111:
  * [Add] NPC Tab (future use)
  * [Add] Objects Tab (future use)